# OpenToolbar

./: CMakeLists.txt  README.md  bash-completion  install.sh  opentoolbar-completion  opentoolbar_completion  uninstall.sh
include/: constants.h  device.h  utils.h
src/: device.c  main.c  opentoolbar-settings-management.c  opentoolbar-settings-management.h  utils.c
src/cli/: opentoolbar-command-line.c  opentoolbar-command-line.h
